--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Programming Record
 markdown: Dy
 url: ""
-baseurl: "/jekyll-theme-serial-programmer"
+baseurl: "https://ssromh.github.io"
 
 # for atom feed
 author:
