--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,23 +1,22 @@
-name: Sharad Raj
+name: 김도영
 dp: https://avatars2.githubusercontent.com/u/36638057?s=460&u=0cbe4fd6b5a3655d91b3eb86db834d0829a0c086&v=4
 description: "
   <p>
-    Developed by Sharad Raj who lives in India building useful things for the world.
+    Programmer from somewhere.
   </p>
   <br/>
   <p>
-    You should follow him on <a href='https://github.com/sharadcodes' target='_blank'>Github</a>
+    Follow me at <a href='https://www.instagram.com/dy___.s/' target='_blank'>Instagram</a>
   </P>
 "
 email: dev_sharad@outlook.com
 contact:
   - title: linkedin
-    url: https://www.linkedin.com/in/srsmaurya
   - title: github
-    url: https://github.com/sharadcodes
+    url: https://github.com/ssromh
   - title: twitter
-    url: https://twitter.com/iamsharadraj
+    url: 
   - title: dev
-    url: https://dev.to/sharadcodes
+    url: 
   - title: email
-    url: mailto:dev_sharad@outlook.com
+    url: ssromh@kakao.com
