--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Programming Record
 markdown: kramdown
-url: ""
-baseurl: "https://ssromh.github.io/"
+url: "https://ssromh.github.io/"
+baseurl: ""
 
 # for atom feed
 author:
